<resources>
    <string name="app_name">NevigationDrawerDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer_details">Developer Details</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_demo_about">DemoAboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="model">Model</string>
    <string name="device_name">Device Name</string>
    <string name="manufacture">Manufacturer</string>
    <string name="mobile_network_status">Mobile Network Status</string>
    <string name="screen">Screen</string>
    <string name="version_os">Version OS</string>
    <string name="serial">Serial</string>
    <string name="kernel">Kernel Version</string>
    <string name="build">Build</string>
    <string name="version_code">Version Code</string>
    <string name="version_no">Version Number</string>
    <string name="packageName">Package Name</string>
    <string name="targetSdkVersion">Target SDK Version</string>
    <string name="maxsdk">Maximum SDK</string>
    <string name="organizationInfo">Organization Information</string>
    <string name="settingFragment">Settings</string>
</resources>
